feat: add links for safco template

--- a/Email Templates/safco.html
+++ b/Email Templates/safco.html
@@ -230,7 +230,9 @@
           <tbody>
             <tr>
               <td class="hs_padded" align="left" valign="top" style="font-family:Verdana, sans-serif; color:#23496d; word-break:break-word; text-align:left; padding:15px 20px 10px; font-size:0px">
-                <img alt="Frame 27" src="https://143975299.fs1.hubspotusercontent-eu1.net/hub/143975299/hubfs/Frame%2027.png?width=290&amp;upscale=true&amp;name=Frame%2027.png" style="outline:none; text-decoration:none; max-width:100%; font-size:16px" width="145" align="middle">
+                <a href="https://www.safcoproducts.com/">
+                  <img alt="Frame 27" src="https://143975299.fs1.hubspotusercontent-eu1.net/hub/143975299/hubfs/Frame%2027.png?width=290&amp;upscale=true&amp;name=Frame%2027.png" style="outline:none; text-decoration:none; max-width:100%; font-size:16px" width="145" align="middle">
+                </a>
               </td>
             </tr>
           </tbody>
@@ -259,7 +261,7 @@
                           <tbody>
                             <tr align="right">
                               <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle">
-                                <a href="" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="0" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Facebook%20Icon.png" alt="Facebook" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
+                                <a href="https://www.facebook.com/SafcoProductsCompany" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="0" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Facebook%20Icon.png" alt="Facebook" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
                                 </a>
                               </td>
                             </tr>
@@ -271,7 +273,7 @@
                           <tbody>
                             <tr align="right">
                               <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle">
-                                <a href="" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="1" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/linkedin_icon_white%201.png" alt="LinkedIn" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
+                                <a href="https://www.linkedin.com/company/safco-products/" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="1" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/linkedin_icon_white%201.png" alt="LinkedIn" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
                                 </a>
                               </td>
                             </tr>
@@ -283,7 +285,7 @@
                           <tbody>
                             <tr align="right">
                               <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle">
-                                <a href="" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="2" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/IG%20Icon.png" alt="Instagram" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
+                                <a href="https://www.instagram.com/safcoproducts/?ref=badge" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="2" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/IG%20Icon.png" alt="Instagram" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
                                 </a>
                               </td>
                             </tr>
@@ -755,7 +757,7 @@
                 font-weight: 400;
                 line-height: 20px;
                 ">We’re happy to answer your questions about our products and help you find the best solution for your furniture needs.</p>
-                <a href="#!" style="
+                <a href="https://www.safcoproducts.com/About-Us/Contact-Us" style="
                   font-size: 13px;
                   font-weight: 700;
                   line-height: 21.5px;
@@ -845,7 +847,9 @@
             <tbody>
               <tr>
                 <td class="hs_padded" align="center" valign="top" style="font-family:Verdana, sans-serif; color:#23496d; word-break:break-word; text-align:center; padding:10px 20px; font-size:0px">
-                  <img alt="Frame 27" src="https://143975299.fs1.hubspotusercontent-eu1.net/hub/143975299/hubfs/Frame%2027.png?width=290&amp;upscale=true&amp;name=Frame%2027.png" style="outline:none; text-decoration:none; max-width:100%; font-size:16px" width="145" align="middle">
+                  <a href="https://www.safcoproducts.com/">
+                    <img alt="Frame 27" src="https://143975299.fs1.hubspotusercontent-eu1.net/hub/143975299/hubfs/Frame%2027.png?width=290&amp;upscale=true&amp;name=Frame%2027.png" style="outline:none; text-decoration:none; max-width:100%; font-size:16px" width="145" align="middle">
+                  </a>
                 </td>
               </tr>
             </tbody>
@@ -857,7 +861,7 @@
               <td class="hs_padded" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:10px 95px; text-align: center;" align="center">
                 <div id="hs_cos_wrapper_module_17339974978162" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module" style="color: inherit; font-size: inherit; line-height: inherit;" data-hs-cos-general-type="widget" data-hs-cos-type="module">
                   <div id="hs_cos_wrapper_module_17339974978162_" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_rich_text" style="color: inherit; font-size: inherit; line-height: inherit;" data-hs-cos-general-type="widget" data-hs-cos-type="rich_text" data-editorblocktype="Text">
-                    <h2 style="margin:0; mso-line-height-rule:exactly; font-size:22px; line-height:100%"><span style="color: #ffffff; font-size: 21px;">Contact Us!</span></h2>
+                    <h2 style="margin:0; mso-line-height-rule:exactly; font-size:22px; line-height:100%"><a href="https://www.safcoproducts.com/About-Us/Contact-Us" style="text-decoration: none;"><span style="color: #ffffff; text-decoration: none; font-size: 21px;">Contact Us!</span></a></h2>
                   </div>
                 </div>
               </td>
@@ -904,7 +908,7 @@
                           <tbody>
                             <tr>
                               <td align="center" valign="middle" bgcolor="#000000" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; border-radius:3px; cursor:auto; background-color:#000000; border:1px solid #F04923; box-sizing:border-box; mso-padding-alt:12px 10px">
-                                <a href="#top" target="_blank" style="color:#00a4bd; font-size:13px; font-family:Verdana, sans-serif; Margin:0; text-transform:none; text-decoration:none; padding:12px 10px; display:block; width: 140px;" data-hs-link-id="0" data-editorblocktype="Text">
+                                <a href="mailto:stephenfitzgerald@safcoproducts.com" target="_blank" style="color:#00a4bd; font-size:13px; font-family:Verdana, sans-serif; Margin:0; text-transform:none; text-decoration:none; padding:12px 10px; display:block; width: 140px;" data-hs-link-id="0" data-editorblocktype="Text">
                                   <strong style="color:#f04923;font-weight:bold;text-decoration:none;font-style:normal;">Western Region</strong>
                                 </a>
                               </td>
@@ -935,7 +939,7 @@
                           <tbody>
                             <tr>
                               <td align="center" valign="middle" bgcolor="#000000" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; border-radius:3px; cursor:auto; background-color:#000000; border:1px solid #D8E09A; box-sizing:border-box; mso-padding-alt:12px 10px">
-                                <a href="#top" target="_blank" style="color:#00a4bd; font-size:13px; font-family:Verdana, sans-serif; Margin:0; text-transform:none; text-decoration:none; padding:12px 10px; display:block; width: 140px;" data-hs-link-id="1" data-editorblocktype="Text">
+                                <a href="mailto:travisholland@safcoproducts.com" target="_blank" style="color:#00a4bd; font-size:13px; font-family:Verdana, sans-serif; Margin:0; text-transform:none; text-decoration:none; padding:12px 10px; display:block; width: 140px;" data-hs-link-id="1" data-editorblocktype="Text">
                                   <strong style="color:#d8e09a;font-weight:bold;text-decoration:none;font-style:normal;">Eastern Region</strong>
                                 </a>
                               </td>
@@ -1009,7 +1013,7 @@
                           <tbody>
                             <tr>
                               <td align="center" valign="middle" bgcolor="#000000" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; border-radius:3px; cursor:auto; background-color:#000000; border:1px solid #99D5E9; box-sizing:border-box; mso-padding-alt:12px 10px">
-                                <a href="#top" target="_blank" style="color:#00a4bd; font-size:13px; font-family:Verdana, sans-serif; Margin:0; text-transform:none; text-decoration:none; padding:12px 10px; display:block; width: 140px;" data-hs-link-id="2" data-editorblocktype="Text">
+                                <a href="mailto:christinalibby@safcoproducts.com" target="_blank" style="color:#00a4bd; font-size:13px; font-family:Verdana, sans-serif; Margin:0; text-transform:none; text-decoration:none; padding:12px 10px; display:block; width: 140px;" data-hs-link-id="2" data-editorblocktype="Text">
                                   <strong style="color:#99d5e9;font-weight:bold;text-decoration:none;font-style:normal;">Central Region</strong>
                                 </a>
                               </td>
@@ -1040,7 +1044,7 @@
                           <tbody>
                             <tr>
                               <td align="center" valign="middle" bgcolor="#000000" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; border-radius:3px; cursor:auto; background-color:#000000; border:1px solid #CFB5D6; box-sizing:border-box; mso-padding-alt:12px 10px">
-                                <a href="#top" target="_blank" style="color:#00a4bd; font-size:13px; font-family:Verdana, sans-serif; Margin:0; text-transform:none; text-decoration:none; padding:12px 10px; display:block; width: 140px;" data-hs-link-id="3" data-editorblocktype="Text">
+                                <a href="mailto:info@safcoproducts.com" target="_blank" style="color:#00a4bd; font-size:13px; font-family:Verdana, sans-serif; Margin:0; text-transform:none; text-decoration:none; padding:12px 10px; display:block; width: 140px;" data-hs-link-id="3" data-editorblocktype="Text">
                                   <strong style="color:#cfb5d6;font-weight:bold;text-decoration:none;font-style:normal;">Customer Care</strong>
                                 </a>
                               </td>
@@ -1086,7 +1090,7 @@
                             <tbody>
                               <tr align="center">
                                 <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle">
-                                  <a href="" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="3" target="_blank">
+                                  <a href="https://www.facebook.com/SafcoProductsCompany" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="3" target="_blank">
                                     <img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Facebook%20Icon.png" alt="Facebook" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
                                   </a>
                                 </td>
@@ -1099,7 +1103,7 @@
                             <tbody>
                               <tr align="center">
                                 <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle">
-                                  <a href="" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="4" target="_blank">
+                                  <a href="https://www.linkedin.com/company/safco-products/" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="4" target="_blank">
                                     <img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/linkedin_icon_white%201.png" alt="LinkedIn" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
                                   </a>
                                 </td>
@@ -1112,7 +1116,7 @@
                             <tbody>
                               <tr align="center">
                                 <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle">
-                                  <a href="" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="5" target="_blank">
+                                  <a href="https://www.instagram.com/safcoproducts/?ref=badge" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="5" target="_blank">
                                     <img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/IG%20Icon.png" alt="Instagram" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
                                   </a>
                                 </td>
@@ -1147,7 +1151,9 @@
                 <div id="hs_cos_wrapper_module_17339977893475" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module" style="color: inherit; font-size: inherit; line-height: inherit;" data-hs-cos-general-type="widget" data-hs-cos-type="module">
                   <div id="hs_cos_wrapper_module_17339977893475_" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_rich_text" style="color: inherit; font-size: inherit; line-height: inherit;" data-hs-cos-general-type="widget" data-hs-cos-type="rich_text" data-editorblocktype="Text">
                     <p style="mso-line-height-rule:exactly; font-size:13px; line-height:175%; text-align:center" align="center">
-                      <span style="color: #ffffff; font-weight: 700;">safcoproducts.com</span>
+                      <a href="https://www.safcoproducts.com/" style="text-decoration: none;">
+                        <span style="color: #ffffff; font-weight: 700;">safcoproducts.com</span>
+                      </a>
                     </p>
                   </div>
                 </div>
