--- a/Email Templates/onsemble.html
+++ b/Email Templates/onsemble.html
@@ -239,7 +239,9 @@
 <tbody>
 <tr>
   <td class="hs_padded" align="left" valign="top" style="font-family:Verdana, sans-serif; color:#23496d; word-break:break-word; text-align:left; padding:15px 20px 10px; font-size:0px">
-    <img alt="Frame 27" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/attachment%20(8)%201.png" style="outline:none; text-decoration:none; max-width:100%; font-size:16px" width="145" align="middle">
+    <a href="https://www.onsemblesolutions.com/">
+      <img alt="Frame 27" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/attachment%20(8)%201.png" style="outline:none; text-decoration:none; max-width:100%; font-size:16px" width="145" align="middle">
+    </a>
   </td>
 </tr>
 </tbody>
@@ -262,7 +264,7 @@
       <tbody>
         <tr align="right">
           <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle">
-            <a href="" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="0" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Vector%20(1).png" alt="Facebook" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
+            <a href="https://www.linkedin.com/company/onsemblesolutions" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="0" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Vector%20(1).png" alt="Facebook" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
             </a>
           </td>
         </tr>
@@ -273,7 +275,7 @@
       <tbody>
         <tr align="right">
           <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle">
-            <a href="" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="1" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Group%20(2).png" alt="LinkedIn" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
+            <a href="https://www.instagram.com/onsemblesolutions/?ref=badge" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="1" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Group%20(2).png" alt="LinkedIn" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
             </a>
           </td>
         </tr>
@@ -284,7 +286,7 @@
       <tbody>
         <tr align="right">
           <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle">
-            <a href="" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="2" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Group%20(3).png" alt="Instagram" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
+            <a href="http://www.pinterest.com/onsemble" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="2" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Group%20(3).png" alt="Instagram" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
             </a>
           </td>
         </tr>
@@ -869,7 +871,7 @@
                   </p>
                   <p style="mso-line-height-rule:exactly; line-height:175%">
                     <span style="font-family: Verdana, sans-serif; color: #000000;">
-                      <a href="#!" style="display:block; width:100%; padding-top:30px; color:#000; font-size:14px; text-align:center; line-height:18px; text-decoration:none" align="center" data-hs-link-id="4" target="_blank">Let’s Meet &gt;</a>
+                      <a href="https://www.onsemblesolutions.com/contact/" style="display:block; width:100%; padding-top:30px; color:#000; font-size:14px; text-align:center; line-height:18px; text-decoration:none" align="center" data-hs-link-id="4" target="_blank">Let’s Meet &gt;</a>
                     </span>
                   </p>
                 </div>
@@ -942,7 +944,9 @@
             <tbody>
               <tr>
                 <td class="hs_padded" align="center" valign="top" style="font-family:Verdana, sans-serif; color:#23496d; word-break:break-word; text-align:center; padding:40px 20px 10px; font-size:0px">
-                  <img alt="Frame 27" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Group%20(6).png" style="outline:none; text-decoration:none; max-width:100%; font-size:16px" width="145" align="middle">
+                  <a href="https://www.onsemblesolutions.com/">
+                    <img alt="Frame 27" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Group%20(6).png" style="outline:none; text-decoration:none; max-width:100%; font-size:16px" width="145" align="middle">
+                  </a>
                 </td>
               </tr>
             </tbody>
@@ -963,7 +967,7 @@
                             <tbody>
                               <tr align="center">
                                 <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle">
-                                  <a href="" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="3" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Vector%20(2).png" alt="Facebook" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
+                                  <a href="https://www.linkedin.com/company/onsemblesolutions" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="3" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Vector%20(2).png" alt="Facebook" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
                                   </a>
                                 </td>
                               </tr>
@@ -975,7 +979,7 @@
                             <tbody>
                               <tr align="center">
                                 <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle">
-                                  <a href="" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="4" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Group%20(4).png" alt="LinkedIn" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
+                                  <a href="https://www.instagram.com/onsemblesolutions/?ref=badge" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="4" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Group%20(4).png" alt="LinkedIn" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
                                   </a>
                                 </td>
                               </tr>
@@ -987,7 +991,7 @@
                             <tbody>
                               <tr align="center">
                                 <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle">
-                                  <a href="" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="5" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Group%20(5).png" alt="Instagram" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
+                                  <a href="http://www.pinterest.com/onsemble" style="color:#00a4bd; text-decoration:none !important" data-hs-link-id="5" target="_blank"><img style="border-radius: 2px;" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/Group%20(5).png" alt="Instagram" height="25" style="outline:none; text-decoration:none; border:none; width:auto!important; height:25px!important; vertical-align:middle" valign="middle" width="auto">
                                   </a>
                                 </td>
                               </tr>
@@ -1016,7 +1020,7 @@
                             <tbody>
                               <tr align="center">
                                 <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle" data-editorblocktype="Text">
-                                  <a href="" style="color:#FFF; font-size: 17px; text-decoration:none !important;" data-hs-link-id="3" target="_blank">
+                                  <a href="https://www.onsemblesolutions.com/start-project/" style="color:#FFF; font-size: 17px; text-decoration:none !important;" data-hs-link-id="3" target="_blank">
                                     Start a project
                                   </a>
                                 </td>
@@ -1029,7 +1033,7 @@
                             <tbody>
                               <tr align="center">
                                 <td class="display_block_on_small_screens" style="font-family:Verdana, sans-serif; font-size:15px; color:#23496d; word-break:break-word; padding:8px 5px; line-height:1; vertical-align:middle" valign="middle" data-editorblocktype="Text">
-                                  <a href="" style="color:#FFF; font-size: 17px; text-decoration:none !important;" data-hs-link-id="4" target="_blank">
+                                  <a href="https://www.onsemblesolutions.com/contact/" style="color:#FFF; font-size: 17px; text-decoration:none !important;" data-hs-link-id="4" target="_blank">
                                     Contact us
                                   </a>
                                 </td>
@@ -1059,7 +1063,9 @@
                   <div id="hs_cos_wrapper_module_17339977893475" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module" style="color: inherit; font-size: inherit; line-height: inherit;" data-hs-cos-general-type="widget" data-hs-cos-type="module">
                     <div id="hs_cos_wrapper_module_17339977893475_" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_rich_text" style="color: inherit; font-size: inherit; line-height: inherit;" data-hs-cos-general-type="widget" data-hs-cos-type="rich_text" data-editorblocktype="Text">
                       <p style="mso-line-height-rule:exactly; font-size:13px; line-height:175%; text-align:center" align="center">
-                        <span style="color: #ffffff; font-weight: 700;">onsemblesolutions.com</span>
+                        <a href="https://www.onsemblesolutions.com/" style="text-decoration: none;">
+                          <span style="color: #ffffff; font-weight: 700;">onsemblesolutions.com</span>
+                        </a>
                       </p>
                     </div>
                   </div>
