feat: updates to onsemble and safco emails

--- a/Email Templates/onsemble.html
+++ b/Email Templates/onsemble.html
@@ -405,11 +405,22 @@
                   <p style="mso-line-height-rule:exactly; line-height:1.2">
                     <span style="font-family: Verdana, sans-serif; color: #000000;">Clear lines of sight and intentional points of gathering facilitate collaboration. Because when people feel secure in their environment, they can connect.</span>
                   </p>
-                  <p style="mso-line-height-rule:exactly; line-height:1.2">
+                  <!-- <p style="mso-line-height-rule:exactly; line-height:1.2">
                     <span style="font-family: Verdana, sans-serif; color: #000000;">
-                      <a href="#!" style="display:block; width:100%; padding-top:20px; color:#000; font-size:14px; text-align:right; line-height:18px; text-decoration:none" align="right" data-hs-link-id="0" target="_blank">View Unyon  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
+                      <a href="#!" style="display:block; width:100%; padding-top:20px; color:#000; font-size:14px; text-align:right; line-height:18px; text-decoration:underline;" align="right" data-hs-link-id="0" target="_blank">View Unyon  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
                     </span>
-                  </p>
+                  </p> -->
+                  <table align="right">
+                    <tbody align="right">
+                      <tr align="right">
+                        <td style="border-bottom: 1px solid #000;" align="right">
+                          <span style="font-family: Verdana, sans-serif; color: #000000;">
+                            <a href="#!" style="display:block; width:100%; padding-top:20px; color:#000; font-size:14px; text-align:right; line-height:18px; text-decoration:none;" align="right" data-hs-link-id="0" target="_blank">View Unyon  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
+                          </span>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </td>
@@ -482,11 +493,22 @@
                   <p style="mso-line-height-rule:exactly; line-height:1.2">
                     <span style="font-family: Verdana, sans-serif; color: #000000;">Innovation is a direct result of experimentation. When the right idea strikes, we all benefit. And creating spaces that enable people to approach problems.</span>
                   </p>
-                  <p style="mso-line-height-rule:exactly; line-height:1.2">
+                  <!-- <p style="mso-line-height-rule:exactly; line-height:1.2">
                     <span style="font-family: Verdana, sans-serif; color: #000000;">
-                      <a href="#!" style="display:block; width:100%; padding-top:20px; color:#000; font-size:14px; text-align:right; line-height:18px; text-decoration:none" align="right" data-hs-link-id="1" target="_blank">View Screens  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
+                      <a href="#!" style="display:block; width:100%; padding-top:20px; color:#000; font-size:14px; text-align:right; line-height:18px; text-decoration:underline;" align="right" data-hs-link-id="1" target="_blank">View Screens  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
                     </span>
-                  </p>
+                  </p> -->
+                  <table align="right">
+                    <tbody align="right">
+                      <tr align="right">
+                        <td style="border-bottom: 1px solid #000;" align="right">
+                          <span style="font-family: Verdana, sans-serif; color: #000000;">
+                            <a href="#!" style="display:block; width:100%; padding-top:20px; color:#000; font-size:14px; text-align:right; line-height:18px; text-decoration:none;" align="right" data-hs-link-id="1" target="_blank">View Screens  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
+                          </span>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </td>
@@ -559,11 +581,22 @@
                   <p style="mso-line-height-rule:exactly; line-height:1.2">
                     <span style="font-family: Verdana, sans-serif; color: #000000;">Sometimes people need a place to put their head down and work. Somewhere to contemplate their next move, plan a project or simply reconnect.</span>
                   </p>
-                  <p style="mso-line-height-rule:exactly; line-height:1.2">
+                  <!-- <p style="mso-line-height-rule:exactly; line-height:1.2">
                     <span style="font-family: Verdana, sans-serif; color: #000000;">
-                      <a href="#!" style="display:block; width:100%; padding-top:20px; color:#000; font-size:14px; text-align:right; line-height:18px; text-decoration:none" align="right" data-hs-link-id="2" target="_blank">View Modix  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
+                      <a href="#!" style="display:block; width:100%; padding-top:20px; color:#000; font-size:14px; text-align:right; line-height:18px; text-decoration:underline;" align="right" data-hs-link-id="2" target="_blank">View Modix  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
                     </span>
-                  </p>
+                  </p> -->
+                  <table align="right">
+                    <tbody align="right">
+                      <tr align="right">
+                        <td style="border-bottom: 1px solid #000;" align="right">
+                          <span style="font-family: Verdana, sans-serif; color: #000000;">
+                            <a href="#!" style="display:block; width:100%; padding-top:20px; color:#000; font-size:14px; text-align:right; line-height:18px; text-decoration:none;" align="right" data-hs-link-id="2" target="_blank">View Modix  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
+                          </span>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </td>
@@ -636,11 +669,22 @@
                   <p style="mso-line-height-rule:exactly; line-height:1.2">
                     <span style="font-family: Verdana, sans-serif; color: #000000;">Creating spaces that offer a strong sense of place opens the doors for increased collaboration, creativity and understanding. When teams are engaged, innovation follows.</span>
                   </p>
-                  <p style="mso-line-height-rule:exactly; line-height:1.2">
+                  <!-- <p style="mso-line-height-rule:exactly; line-height:1.2">
                     <span style="font-family: Verdana, sans-serif; color: #000000;">
-                      <a href="#!" style="display:block; width:100%; padding-top:20px; color:#000; font-size:14px; text-align:right; line-height:18px; text-decoration:none" align="right" data-hs-link-id="3" target="_blank">View Unyon  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
+                      <a href="#!" style="display:block; width:100%; padding-top:20px; color:#000; font-size:14px; text-align:right; line-height:18px; text-decoration:underline;" align="right" data-hs-link-id="3" target="_blank">View Unyon  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
                     </span>
-                  </p>
+                  </p> -->
+                  <table align="right">
+                    <tbody align="right">
+                      <tr align="right">
+                        <td style="border-bottom: 1px solid #000;" align="right">
+                          <span style="font-family: Verdana, sans-serif; color: #000000;">
+                            <a href="#!" style="display:block; width:100%; padding-top:20px; color:#000; font-size:14px; text-align:right; line-height:18px; text-decoration:none;" align="right" data-hs-link-id="3" target="_blank">View Unyon  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
+                          </span>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </td>
@@ -692,11 +736,22 @@
                   <p style="mso-line-height-rule:exactly; line-height:175%; text-align:center" align="center">
                     <span style="font-family: Verdana, sans-serif; color: #000000;">Creating spaces that offer a strong sense of place opens the doors for increased collaboration, creativity and understanding. When teams are engaged, innovation follows.</span>
                   </p>
-                  <p style="mso-line-height-rule:exactly; line-height:175%">
+                  <!-- <p style="mso-line-height-rule:exactly; line-height:175%;">
                     <span style="font-family: Verdana, sans-serif; color: #000000;">
-                      <a href="https://www.onsemblesolutions.com/contact/" style="display:block; width:100%; padding-top:30px; color:#000; font-size:14px; text-align:center; line-height:18px; text-decoration:none" align="center" data-hs-link-id="4" target="_blank">Let’s Meet  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
+                      <a href="https://www.onsemblesolutions.com/contact/" style=" display: inline; border-bottom: 1px solid #000; width:100%; padding-top:30px; color:#000; font-size:14px; text-align:center; line-height:18px; text-decoration:none;" align="center" data-hs-link-id="4" target="_blank">Let’s Meet  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
                     </span>
-                  </p>
+                  </p> -->
+                  <table align="center">
+                    <tbody align="center">
+                      <tr align="center">
+                        <td style="border-bottom: 1px solid #000;" align="center">
+                          <span style="font-family: Verdana, sans-serif; color: #000000;">
+                            <a href="https://www.onsemblesolutions.com/contact/" style=" display: block; width:100%; padding-top:30px; color:#000; font-size:14px; text-align:center; line-height:18px; text-decoration:none;" align="center" data-hs-link-id="4" target="_blank">Let’s Meet  <img src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/Frame%2056%20(1).png"></a>
+                          </span>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </td>
@@ -886,7 +941,7 @@
                   <div id="hs_cos_wrapper_module_17339977893475" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module" style="color: inherit; font-size: inherit; line-height: inherit;" data-hs-cos-general-type="widget" data-hs-cos-type="module">
                     <div id="hs_cos_wrapper_module_17339977893475_" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_rich_text" style="color: inherit; font-size: inherit; line-height: inherit;" data-hs-cos-general-type="widget" data-hs-cos-type="rich_text" data-editorblocktype="Text">
                       <p style="mso-line-height-rule:exactly; font-size:13px; line-height:175%; text-align:center" align="center">
-                        <a href="https://www.onsemblesolutions.com/" style="text-decoration: none;">
+                        <a href="https://www.onsemblesolutions.com/" style="text-decoration: none; color: #FFF;">
                           <span style="color: #ffffff; font-weight: 700;">onsemblesolutions.com</span>
                         </a>
                       </p>
