--- a/Email Templates/safco.html
+++ b/Email Templates/safco.html
@@ -231,7 +231,7 @@
             <tr>
               <td class="hs_padded" align="left" valign="top" style="font-family:Verdana, sans-serif; color:#23496d; word-break:break-word; text-align:left; padding:15px 20px 10px; font-size:0px">
                 <a href="https://www.safcoproducts.com/">
-                  <img alt="Frame 27" src="https://143975299.fs1.hubspotusercontent-eu1.net/hub/143975299/hubfs/Frame%2027.png?width=290&amp;upscale=true&amp;name=Frame%2027.png" style="outline:none; text-decoration:none; max-width:100%; font-size:16px" width="145" align="middle">
+                  <img alt="Frame 27" src="https://24211329.fs1.hubspotusercontent-na1.net/hubfs/24211329/custom-video-thumbnails/logo_3_320.png" style="outline:none; text-decoration:none; max-width:100%; font-size:16px" width="145" align="middle">
                 </a>
               </td>
             </tr>
