feat: replace images

--- a/Email Templates/protect_siding_starter.html
+++ b/Email Templates/protect_siding_starter.html
@@ -1210,7 +1210,7 @@
                               >
                                 <img
                                   alt="Frame 66"
-                                  src="https://143975299.fs1.hubspotusercontent-eu1.net/hub/143975299/hubfs/Frame%2066.png?width=520&amp;upscale=true&amp;name=Frame%2066.png"
+                                  src="https://143975299.fs1.hubspotusercontent-eu1.net/hubfs/143975299/big-image-1.png"
                                   style="
                                     outline: none;
                                     text-decoration: none;
@@ -1273,7 +1273,7 @@
                               >
                                 <img
                                   alt="Frame 67"
-                                  src="https://143975299.fs1.hubspotusercontent-eu1.net/hub/143975299/hubfs/Frame%2067.png?width=520&amp;upscale=true&amp;name=Frame%2067.png"
+                                  src="https://143975299.fs1.hubspotusercontent-eu1.net/hubfs/143975299/big-image-2.png"
                                   style="
                                     outline: none;
                                     text-decoration: none;
