feat: update images

--- a/Email Templates/protect_siding_starter.html
+++ b/Email Templates/protect_siding_starter.html
@@ -1210,7 +1210,7 @@
                               >
                                 <img
                                   alt="Frame 66"
-                                  src="https://143975299.fs1.hubspotusercontent-eu1.net/hubfs/143975299/big-image-1.png"
+                                  src="https://143975299.fs1.hubspotusercontent-eu1.net/hubfs/143975299/Quarrix_ProTect%20Furring%20Strip_Diagrams-02.png"
                                   style="
                                     outline: none;
                                     text-decoration: none;
@@ -1273,7 +1273,7 @@
                               >
                                 <img
                                   alt="Frame 67"
-                                  src="https://143975299.fs1.hubspotusercontent-eu1.net/hubfs/143975299/big-image-2.png"
+                                  src="https://143975299.fs1.hubspotusercontent-eu1.net/hubfs/143975299/Quarrix_ProTect%20Furring%20Strip_Diagrams-01.png"
                                   style="
                                     outline: none;
                                     text-decoration: none;
