fix: excess css and javascript removed and renamed css and javascript files

--- a/Landing Pages/home-page.html
+++ b/Landing Pages/home-page.html
@@ -7,7 +7,7 @@
         <title>
             Quarrix Building Products: Attic Protection | Roof Protection I Wall Protection
         </title>
-        <link rel="stylesheet" href="./styles/cerise_v5.0.0_8.14.24.css" />
+        <link rel="stylesheet" href="./styles/cerise_v1.0.0.css" />
         <link rel="stylesheet" href="./styles/fonts/_fonts.css" />
     </head>
     <body>
@@ -430,6 +430,6 @@
         </section>
         <!-- Quarrix map section end -->
         
-        <script src="./scripts/cerise_v2.0.0_5.29.24.js"></script>
+        <script src="./scripts/cerise_v1.0.0.js"></script>
     </body>
 </html>
