--- a/Landing Pages/landing-page.html
+++ b/Landing Pages/landing-page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quarrix</title>
-    <link rel="stylesheet" href="./styles/cerise_v5.0.0_8.14.24.css" />
+    <link rel="stylesheet" href="./styles/cerise_v1.0.0.css" />
     <link rel="stylesheet" href="./styles/fonts/_fonts.css" />
     <link
       rel="stylesheet"
@@ -280,6 +280,6 @@
       </div>
     </section>
 
-    <script src="./scripts/cerise_v2.0.0_5.29.24.js"></script>
+    <script src="./scripts/cerise_v1.0.0.js"></script>
   </body>
 </html>
