ProTect Lander Images

--- a/Landing Pages/images_on_kentico.html
+++ b/Landing Pages/images_on_kentico.html
@@ -11,6 +11,7 @@
     </style>
 </head>
 <body>
+    <h1>Image Page | Home</h1>
     <img src="https://www.quarrix.com/QuarrixDev/media/home2/quarrix-hero-image.png" alt="Quarrix Hero Image">
     <img src="https://www.quarrix.com/QuarrixDev/media/home2/attic-protection.svg" alt="Attic Protection">
     <img src="https://www.quarrix.com/QuarrixDev/media/home2/roof-protection.svg" alt="Roof Protection">
@@ -31,5 +32,15 @@
     <img src="https://www.quarrix.com/QuarrixDev/media/home2/roof-protection-image.png" alt="Roof Protection Image">
     <img src="https://www.quarrix.com/QuarrixDev/media/home2/storm-stop-side-image.png" alt="Storm Stop Side Image">
     <img src="https://www.quarrix.com/QuarrixDev/media/home2/wall-protection-image.png" alt="Wall Protection Image">
+    <h1>Image Page | ProTect Lander</h1>
+    <img src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Frame-201171275748.png" alt="Frame 201171275748">
+    <img src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/df613fe81fd025a6196c72dc6da81458.png" alt="Image df613fe81fd025a6196c72dc6da81458">
+    <img src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Frame-201171275739.png" alt="Frame 201171275739">
+    <img src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Frame-201171275748.png" alt="Frame 201171275748">
+    <img src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Frame-201171275749.png" alt="Frame 201171275749">
+    <img src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Frame-201263.png" alt="Frame 201263">
+    <img src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Group-20627424.png" alt="Group 20627424">
+    <img src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Rectangle-2022.png" alt="Rectangle 2022">
+    <img src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Siding-20Panels-20Background.png" alt="Siding Panels Background">
 </body>
 </html>
